Completed the image grid and the footer. This sums up the first mockup of the gallery website

--- a/index.html
+++ b/index.html
@@ -5,26 +5,93 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <title>A.S Photography</title>
 </head>
 <body>
     <header>
         <nav>
             <div class="logo"></div>
-            <div class="menu-btn"></div>
+            <span class="menu-btn">
+                <i class="fas fa-angle-double-down"></i>
+            </span>
         </nav>
     </header>
     <main>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>
+            <img src="https://picsum.photos/id/1/400/300" alt="random-image">
+            <div class="overlay">
+                <h1>PICTURE <em>NAME</em></h1>
+                <p>SOME CONTENT ON PICTURE</p>
+            </div>
+        </div>
+        <div>
+            <div class="overlay">
+                <h1>PICTURE <em>NAME</em></h1>
+                <p>SOME CONTENT ON PICTURE</p>
+            </div>
+            <img src="https://picsum.photos/id/20/400/300" alt="random-image">
+        </div>
+        <div>
+            <div class="overlay">
+                <h1>PICTURE <em>NAME</em></h1>
+                <p>SOME CONTENT ON PICTURE</p>
+            </div>
+            <img src="https://picsum.photos/id/30/400/300" alt="random-image">
+        </div>
+        <div>
+            <div class="overlay">
+                <h1>PICTURE <em>NAME</em></h1>
+                <p>SOME CONTENT ON PICTURE</p>
+            </div>
+            <img src="https://picsum.photos/id/40/400/300" alt="random-image">
+        </div>
+        <div>
+            <div class="overlay">
+                <h1>PICTURE <em>NAME</em></h1>
+                <p>SOME CONTENT ON PICTURE</p>
+            </div>
+            <img src="https://picsum.photos/id/50/400/300" alt="random-image">
+        </div>
+        <div>
+            <div class="overlay">
+                <h1>PICTURE <em>NAME</em></h1>
+                <p>SOME CONTENT ON PICTURE</p>
+            </div>
+            <img src="https://picsum.photos/id/60/400/300" alt="random-image">
+        </div>
+        <div>
+            <div class="overlay">
+                <h1>PICTURE <em>NAME</em></h1>
+                <p>SOME CONTENT ON PICTURE</p>
+            </div>
+            <img src="https://picsum.photos/id/70/400/300" alt="random-image">
+        </div>
+        <div>
+            <div class="overlay">
+                <h1>PICTURE <em>NAME</em></h1>
+                <p>SOME CONTENT ON PICTURE</p>
+            </div>
+            <img src="https://picsum.photos/id/80/400/300" alt="random-image">
+        </div>
+        <div>
+            <div class="overlay">
+                <h1>PICTURE <em>NAME</em></h1>
+                <p>SOME CONTENT ON PICTURE</p>
+            </div>
+            <img src="https://picsum.photos/id/90/400/300" alt="random-image">
+        </div>
     </main>
-    <footer></footer>
+    <footer>
+        <h1>Get In Touch</h1>
+        <div class="socials">
+            <span><i class="fab fa-instagram"></i></span>
+            <span><i class="fab fa-facebook"></i></span>
+            <span><i class="fas fa-envelope"></i></span>
+        </div>
+        <p>Created by Aryan Asthana &#169; AS-LOGO</p>
+    </footer>
 </body>
 </html>
