Added the header video with overlay, added vignette effect on the gallery images

--- a/index.html
+++ b/index.html
@@ -13,77 +13,93 @@
 <body>
     <header>
         <nav>
-            <div class="logo"></div>
+            <div class="logo"><img src="./assets/AS-Logo.svg" alt=""></div>
             <span class="menu-btn">
                 <i class="fas fa-angle-double-down"></i>
             </span>
         </nav>
+        <div class="video-container">
+            <div class="overlay-video"></div> 
+            <video autoplay loop muted src="./assets/Nova Scotia 15 second aerial video in 4K! - DJI Phantom 2.mkv"></video>
+        </div>
+        
     </header>
-    <main>
-        <div>
-            <img src="https://picsum.photos/id/1/400/300" alt="random-image">
-            <div class="overlay">
-                <h1>PICTURE <em>NAME</em></h1>
-                <p>SOME CONTENT ON PICTURE</p>
+    <div>
+        <main>
+            <div>
+                <img src="https://picsum.photos/id/1/400/300" alt="random-image">
+                <div class="vignette"></div>
+                <div class="overlay">
+                    <h1>PICTURE <em>NAME</em></h1>
+                    <p>SOME CONTENT ON PICTURE</p>
+                </div>
             </div>
-        </div>
-        <div>
-            <div class="overlay">
-                <h1>PICTURE <em>NAME</em></h1>
-                <p>SOME CONTENT ON PICTURE</p>
+            <div>
+                <div class="vignette"></div>
+                <div class="overlay">
+                    <h1>PICTURE <em>NAME</em></h1>
+                    <p>SOME CONTENT ON PICTURE</p>
+                </div>
+                <img src="https://picsum.photos/id/20/400/300" alt="random-image">
             </div>
-            <img src="https://picsum.photos/id/20/400/300" alt="random-image">
-        </div>
-        <div>
-            <div class="overlay">
-                <h1>PICTURE <em>NAME</em></h1>
-                <p>SOME CONTENT ON PICTURE</p>
+            <div>
+                <div class="vignette"></div>
+                <div class="overlay">
+                    <h1>PICTURE <em>NAME</em></h1>
+                    <p>SOME CONTENT ON PICTURE</p>
+                </div>
+                <img src="https://picsum.photos/id/30/400/300" alt="random-image">
             </div>
-            <img src="https://picsum.photos/id/30/400/300" alt="random-image">
-        </div>
-        <div>
-            <div class="overlay">
-                <h1>PICTURE <em>NAME</em></h1>
-                <p>SOME CONTENT ON PICTURE</p>
+            <div>
+                <div class="vignette"></div>
+                <div class="overlay">
+                    <h1>PICTURE <em>NAME</em></h1>
+                    <p>SOME CONTENT ON PICTURE</p>
+                </div>
+                <img src="https://picsum.photos/id/40/400/300" alt="random-image">
             </div>
-            <img src="https://picsum.photos/id/40/400/300" alt="random-image">
-        </div>
-        <div>
-            <div class="overlay">
-                <h1>PICTURE <em>NAME</em></h1>
-                <p>SOME CONTENT ON PICTURE</p>
+            <div>
+                <div class="vignette"></div>
+                <div class="overlay">
+                    <h1>PICTURE <em>NAME</em></h1>
+                    <p>SOME CONTENT ON PICTURE</p>
+                </div>
+                <img src="https://picsum.photos/id/50/400/300" alt="random-image">
             </div>
-            <img src="https://picsum.photos/id/50/400/300" alt="random-image">
-        </div>
-        <div>
-            <div class="overlay">
-                <h1>PICTURE <em>NAME</em></h1>
-                <p>SOME CONTENT ON PICTURE</p>
+            <div>
+                <div class="vignette"></div>
+                <div class="overlay">
+                    <h1>PICTURE <em>NAME</em></h1>
+                    <p>SOME CONTENT ON PICTURE</p>
+                </div>
+                <img src="https://picsum.photos/id/60/400/300" alt="random-image">
             </div>
-            <img src="https://picsum.photos/id/60/400/300" alt="random-image">
-        </div>
-        <div>
-            <div class="overlay">
-                <h1>PICTURE <em>NAME</em></h1>
-                <p>SOME CONTENT ON PICTURE</p>
+            <div>
+                <div class="vignette"></div>
+                <div class="overlay">
+                    <h1>PICTURE <em>NAME</em></h1>
+                    <p>SOME CONTENT ON PICTURE</p>
+                </div>
+                <img src="https://picsum.photos/id/70/400/300" alt="random-image">
             </div>
-            <img src="https://picsum.photos/id/70/400/300" alt="random-image">
-        </div>
-        <div>
-            <div class="overlay">
-                <h1>PICTURE <em>NAME</em></h1>
-                <p>SOME CONTENT ON PICTURE</p>
+            <div>
+                <div class="vignette"></div>
+                <div class="overlay">
+                    <h1>PICTURE <em>NAME</em></h1>
+                    <p>SOME CONTENT ON PICTURE</p>
+                </div>
+                <img src="https://picsum.photos/id/80/400/300" alt="random-image">
             </div>
-            <img src="https://picsum.photos/id/80/400/300" alt="random-image">
-        </div>
-        <div>
-            <div class="overlay">
-                <h1>PICTURE <em>NAME</em></h1>
-                <p>SOME CONTENT ON PICTURE</p>
+            <div>
+                <div class="vignette"></div>
+                <div class="overlay">
+                    <h1>PICTURE <em>NAME</em></h1>
+                    <p>SOME CONTENT ON PICTURE</p>
+                </div>
+                <img src="https://picsum.photos/id/90/400/300" alt="random-image">
             </div>
-            <img src="https://picsum.photos/id/90/400/300" alt="random-image">
-        </div>
-    </main>
+        </main>
+    </div>
     <footer>
         <h1>Get In Touch</h1>
         <div class="socials">
