Replaced svg logos with pngs, made the nav bar fixed, added custom font ASUL and MONSTERRAT

--- a/index.html
+++ b/index.html
@@ -7,21 +7,27 @@
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Asul&family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+        integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <title>A.S Photography</title>
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo"><img src="./assets/AS-Logo.svg" alt=""></div>
+            <div class="logo"><img src="./assets/AS-Logo.png" alt=""></div>
             <span class="menu-btn">
                 <i class="fas fa-angle-double-down"></i>
             </span>
         </nav>
         <div class="video-container">
             <div class="overlay-video"></div> 
-            <video autoplay loop muted src="./assets/Nova Scotia 15 second aerial video in 4K! - DJI Phantom 2.mkv"></video>
+            <video autoplay loop muted src="./assets/Nova Scotia 15 second aerial video in 4K! - DJI Phantom 2.mp4"></video>
         </div>
+        <span class="header-text">
+            <h1>A.S Photography</h1>
+            <p>This is me and this is what I do !</p>
+        </span>
         
     </header>
     <div>
@@ -107,7 +113,7 @@
             <span><i class="fab fa-facebook"></i></span>
             <span><i class="fas fa-envelope"></i></span>
         </div>
-        <p>Created by Aryan Asthana &#169; AS-LOGO</p>
+        <p>Created by <a target="_blank" href="https://aryan007007.github.io/portfolio"><b>Aryan Asthana</b></a> &nbsp; <em>&#169;</em> &nbsp; <img src="./assets/AS-Logo.png" alt=""></p>
     </footer>
 </body>
 </html>
