Changed the logo with a new one, and the nav color scheme to black

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><img src="./assets/AS-Logo.png" alt=""></div>
+            <div class="logo"><img src="./assets/AS-square.jpg" alt=""></div>
             <span class="menu-btn">
                 <i class="fas fa-angle-double-down"></i>
             </span>
@@ -113,7 +113,7 @@
             <span><i class="fab fa-facebook"></i></span>
             <span><i class="fas fa-envelope"></i></span>
         </div>
-        <p>Created by <a target="_blank" href="https://aryan007007.github.io/portfolio"><b>Aryan Asthana</b></a> &nbsp; <em>&#169;</em> &nbsp; <img src="./assets/AS-Logo.png" alt=""></p>
+        <p>Created by <a target="_blank" href="https://aryan007007.github.io/portfolio"><b>Aryan Asthana</b></a> <em>&#169;</em> <img src="./assets/AS-square.jpg" alt=""></p>
     </footer>
 </body>
 </html>
